add: minor fixes

--- a/camara-node-sdk/examples/views/pages/login.ejs
+++ b/camara-node-sdk/examples/views/pages/login.ejs
@@ -13,7 +13,7 @@
       <label for="username">Username</label>
       <input class="userbox" type="text" name="username" /><br />
       <label for="password">Password</label>
-      <input type="text" name="password" />
+      <input type="password" name="password" />
       <br/>
       <hr/>
       <label for="ipport">Identifier (for demo purposes)</label><br />
