--- a/camara-node-sdk/examples/views/pages/verify.ejs
+++ b/camara-node-sdk/examples/views/pages/verify.ejs
@@ -7,7 +7,7 @@
 
 <main>
   <div class="jumbotron">
-    <h1>Verify Device Page</h1>
+    <h1>Device Location Verification</h1>
     <p>Logged as: <b><%= username %></b></p>
     <p><a class="btn btn-primary" href="/verify">Verify</a>   &nbsp;&nbsp;&nbsp;&nbsp; <a class="btn btn-warning" href="/logout">Logout</a></p>
     <br/>
