--- a/camara-node-sdk/demo-app/views/pages/login.ejs
+++ b/camara-node-sdk/demo-app/views/pages/login.ejs
@@ -7,7 +7,7 @@
 
 <main>
   <div class="jumbotron">
-    <h1>Login</h1>
+    <h1>Demo App Login</h1>
     <form  action="/login" method="post">
 
       <label for="username">Username</label>
