--- a/aggregator/telco-router/service/src/aggregator/templates/layout.html
+++ b/aggregator/telco-router/service/src/aggregator/templates/layout.html
@@ -5,7 +5,7 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>{% trans "Baikal Validation" %}</title>
+    <title>{% trans "Aggregator Validation" %}</title>
 
     <link rel='stylesheet' href='{% vstatic "/lib/bootstrap/dist/css/bootstrap.min.css" %}' />
     <link rel='stylesheet' href='{% vstatic "/stylesheets/base.css" %}' />
