chore: add IPv6 example to the demo-app

--- a/camara-node-sdk/demo-app/views/pages/login.ejs
+++ b/camara-node-sdk/demo-app/views/pages/login.ejs
@@ -25,6 +25,7 @@
       <select name="ipport" id="ipport">
         <option value="83.58.58.57" selected>83.58.58.57:3543 (Telefónica)</option>
         <option value="109.42.3.0">109.42.3.0:4631 (Vodafone)</option>
+        <option value="2a02:9009:5:3134::1">[2a02:9009:5:3134::1]:6273 (Telefónica)</option>
       </select>
       <br/>
       <hr/>
