add: authcode flow support for demoapp

--- a/camara-node-sdk/demo-app/views/pages/login.ejs
+++ b/camara-node-sdk/demo-app/views/pages/login.ejs
@@ -14,11 +14,8 @@
       </div>
     <hr/>
     <form  action="/login" method="post">
-
-      <label for="username" style="width: 90px;">Username</label>
-      <input class="userbox" type="text" name="username" /><br />
-      <label for="password" style="width: 90px;">Password</label>
-      <input type="password" name="password" />
+      <label for="phonenumber" style="width: 120px;">Phone number:</label>
+      <input class="userbox" type="text" name="phonenumber" /><br />
       <br/>
       <hr/>
       <label for="ipport">Identifier (for demo purposes)</label><br />
