add: number verification API

--- a/camara-node-sdk/demo-app/views/pages/verify.ejs
+++ b/camara-node-sdk/demo-app/views/pages/verify.ejs
@@ -45,8 +45,8 @@
           </a>
         </div>
         <div class="col">
-          <a class="btn btn-primary" href="/authcode/verify?state=<%= state %>">
-            Device Location Verification<br/>
+          <a class="btn btn-primary" href="/authcode/numberverify?state=<%= state %>">
+            Number Verification<br/>
             Authorization Code
           </a>
         </div>
