--- a/camara-node-sdk/demo-app/views/pages/verify.ejs
+++ b/camara-node-sdk/demo-app/views/pages/verify.ejs
@@ -1,67 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <%- include('../partials/head'); %>
 </head>
+
 <body class="container">
 
-<main>
-  <div class="jumbotron">
-    <h1>Demo App - Device Location Verification</h1>
-    <hr>
-      <div class="alert alert-warning" role="alert">
-        <p>Once you are logged in the demo-app platform, you can click on the <i>Verify Device Location</i> button in order to consume Camara APIs. The complete process follow the next logic:
-          <ul>
-            <li>If you don't have any access token yet:
-              <ul>
-                <li>Calculate an access token:
-                  <ul>
-                    <li>You send a POST /token to the associated Telco Hyperscaler Authserver</li>
-                    <li>The Authserver using the ipport informations asks the Telco Finder which Telco corresponds to the user Ipport</li>
-                    <li>The Telco Hyperscaler Authserver ask the Telco Operator Platform Authserver for an OIDC 3 legged access token.</li>
-                    <li>An access token will be generated for the demo-app</li>
-                  </ul>
-                </li>
-                <li>Consume CAMARA API to get the information</li>
-              </ul>
+  <main>
+    <div class="jumbotron">
+      <h1>Demo App</h1>
+      <hr />
+
+      <div class="row">
+        <div class="col-md-8 mb-8">
+          <h3>You are logged as: <b>
+              <%= phonenumber %>
+            </b></h3>
+        </div>
+        <div class="col-md-4">
+          <a class="btn btn-warning" href="/logout">Logout</a>
+        </div>
+      </div>
+
+      <hr />
+
+      <div class="row">
+        <div class="col-md-2 mb-3">
+          <ul class="nav nav-tabs flex-column" id="myTab" role="tablist">
+            <li class="nav-item">
+              <a class="nav-link active" id="tab1-tab" data-toggle="tab" href="#tab1" role="tab" aria-controls="tab1"
+                aria-selected="true">JWT Bearer Example</a>
             </li>
-            <li>If you already have an access token:
-              <ul>
-                <li>Consume CAMARA API to get the information</li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link" id="tab2-tab" data-toggle="tab" href="#tab2" role="tab" aria-controls="tab2"
+                aria-selected="false">Authorization Code Example</a>
             </li>
           </ul>
-          You can see a detailed explanation in the following link: <a href="https://github.com/Telefonica/opengateway-aggregation-poc/blob/main/README.md">Architecture Information</a>
-        </p>
+        </div>
+        <div class="col-md-10">
+          <div class="tab-content" id="myTabContent">
+            <div class="tab-pane fade" id="tab1" role="tabpanel" aria-labelledby="tab1-tab">
+              <h2>JWT Bearer Example: Device Location Verification API</h2>
+              <div class="alert alert-warning" role="alert">
+                <p>Once you are logged in the demo-app platform, you can click on the <i>Device Location Verification</i> button in
+                  order to consume Camara APIs. The complete process follow the next logic:
+                <ul>
+                  <li>If you don't have any access token yet:
+                    <ul>
+                      <li>Calculate an access token:
+                        <ul>
+                          <li>You send a POST /token to the associated Telco Hyperscaler Authserver</li>
+                          <li>The Authserver using the ipport informations asks the Telco Finder which Telco corresponds to the
+                            user Ipport</li>
+                          <li>The Telco Hyperscaler Authserver ask the Telco Operator Platform Authserver for an OIDC 3 legged
+                            access token.</li>
+                          <li>An access token will be generated for the demo-app</li>
+                        </ul>
+                      </li>
+                      <li>Consume CAMARA API to get the information</li>
+                    </ul>
+                  </li>
+                  <li>If you already have an access token:
+                    <ul>
+                      <li>Consume CAMARA API to get the information</li>
+                    </ul>
+                  </li>
+                </ul>
+                You can see a detailed explanation in the following link: <a
+                  href="https://github.com/Telefonica/opengateway-aggregation-poc/blob/main/README.md">Architecture
+                  Information</a>
+                </p>
+              </div>
+              <hr/>
+
+              <div class="row d-flex justify-content-center">
+                <div class="col-md-4">
+                  <a class="btn btn-primary" href="/jwtbearer/verify">
+                    Device Location Verification<br />
+                    JWT Bearer
+                  </a>
+                </div>              
+              </div>
+
+            </div>
+            <div class="tab-pane fade" id="tab2" role="tabpanel" aria-labelledby="tab2-tab">
+              <h2>Authorization Code Example: Number Verification API</h2>
+              <div class="alert alert-warning" role="alert">
+                <p>Once you are logged in the demo-app platform, you can click on the <i>Number Verification</i> button in
+                  order to consume Camara APIs. The complete process follow the next logic:
+                <ul>
+                  <li>If you don't have any access token yet:
+                    <ul>
+                      <li>Redirect the browser to the authorize endpoint with the needed scopes.</li>
+                      <li>The authserver redirects to the Callback Demo App endpoint including a code.</li>
+                      <li>The Demo App transforms that code in an access token.</li>
+                      <li>Consume CAMARA API to get the information using that access token.</li>
+                    </ul>
+                  </li>
+                  <li>If you already have an access token:
+                    <ul>
+                      <li>Consume CAMARA API to get the information</li>
+                    </ul>
+                  </li>
+                </ul>
+                You can see a detailed explanation in the following link: <a
+                  href="https://auth0.com/docs/get-started/authentication-and-authorization-flow/authorization-code-flow">Architecture
+                  Information</a>
+                </p>
+              </div>
+              <hr/>
+
+              <div class="row d-flex justify-content-center">
+                <div class="col-md-4">
+                  <a class="btn btn-primary" href="/authcode/numberverify?state=<%= state %>">
+                    Number Verification<br />
+                    Authorization Code
+                  </a>
+                </div>              
+              </div>
+
+            </div>
+          </div>
+        </div>
       </div>
-    <hr/>
-    <p>You are logged as: <b><%= phonenumber %></b></p>
-    <div class="container">
-      <div class="row">
-        <div class="col">
-          <a class="btn btn-primary" href="/jwtbearer/verify">
-            Device Location Verification<br/>
-            JWT Bearer
-          </a>
-        </div>
-        <div class="col">
-          <a class="btn btn-primary" href="/authcode/numberverify?state=<%= state %>">
-            Number Verification<br/>
-            Authorization Code
-          </a>
-        </div>
-        <div class="col">
-            <a class="btn btn-warning" href="/logout">Logout</a>          
-        </div>
-      </div>
+      <br />
+      <hr />
+      <p>Result: </p>
+      <% if (result) { %>
+        <pre><%= result %></pre>
+        <% } %>
     </div>
-    <br/>
-    <p>Result: </p>
-    <% if (result) { %>
-    <pre><%= result %></pre>
-    <% } %>
-  </div>
-</main>
+  </main>
 
 </body>
+
 </html>
