--- a/camara-node-sdk/demo-app/views/pages/login.ejs
+++ b/camara-node-sdk/demo-app/views/pages/login.ejs
@@ -22,6 +22,7 @@
       <select name="ipport" id="ipport">
         <option value="83.58.58.57" selected>83.58.58.57:3543 (Telefónica)</option>
         <option value="109.42.3.0">109.42.3.0:4631 (Vodafone)</option>
+        <option value="<%= clientIp %>"><%= clientIp %> (Your Real IP)</option>
       </select>
       <br/>
       <hr/>
