add: authcode flow for login

--- a/camara-node-sdk/demo-app/views/pages/verify.ejs
+++ b/camara-node-sdk/demo-app/views/pages/verify.ejs
@@ -113,8 +113,8 @@
 
               <div class="row d-flex justify-content-center">
                 <div class="col-md-4">
-                  <a class="btn btn-primary" href="/authcode/numberverify?state=<%= state %>">
-                    Number Verification<br />
+                  <a class="btn btn-primary" href="/authcode/verify?state=<%= state %>">
+                    Device Location Verification<br />
                     Authorization Code
                   </a>
                 </div>              
