fix: apply first part of the feedback

--- a/camara-node-sdk/demo-app/views/pages/login.ejs
+++ b/camara-node-sdk/demo-app/views/pages/login.ejs
@@ -7,7 +7,7 @@
 
 <main>
   <div class="jumbotron">
-    <h1>Demo App - Login</h1>
+    <h1>Demo App - Number Verification</h1>
     <hr/>
       <div class="alert alert-warning" role="alert">
         <p>This login will be the demo-app login. For this demo you can use any credentials to log in. This step simulates the 3rd party log in process and allow to select an Ipport in order to affect in the routing process.</p>
@@ -19,7 +19,7 @@
       <br/>
       <hr/>
       <br/>
-      <button type="submit" class="btn btn-primary">Login</button>
+      <button type="submit" class="btn btn-primary">Invoke</button>
 
     </form>
   </div>
