--- a/camara-node-sdk/demo-app/views/pages/verify.ejs
+++ b/camara-node-sdk/demo-app/views/pages/verify.ejs
@@ -43,7 +43,7 @@
             </b></h3>
         </div>
         <div class="col-md-4">
-          <a class="btn btn-warning" href="/logout">Logout</a>
+          <a class="btn btn-warning" href="/logout">Return</a>
         </div>
       </div>
 
