chore: configure azure envs (wip)

--- a/camara-node-sdk/demo-app/views/pages/login.ejs
+++ b/camara-node-sdk/demo-app/views/pages/login.ejs
@@ -10,7 +10,10 @@
     <h1>Demo App - Number Verification</h1>
     <hr/>
       <div class="alert alert-warning" role="alert">
-        <p>This login will be the demo-app login. For this demo you can use any credentials to log in. This step simulates the 3rd party log in process and allow to select an Ipport in order to affect in the routing process.</p>
+        <p>
+          This step simulates how an app can authenticate users using their IP address,
+          obtain an access token and route the API call to the target operator platform.
+        </p>
       </div>
     <hr/>
     <form  action="/login" method="post">
